# jupyter_lab_build

./: .gitignore  AGENTS.md  README.md  app.py  configuration.sh  dockerfile  jlb.py  jupyter_lab_config.py  pyproject.toml  shortcuts.jupyerlab-settings
configuration/: jupyter_lab_config.py  overrides.json  plugin.jupyterlab-settings  setup.sh  shortcuts.jupyterlab-settings
configuration/@jupyterlab/filebrowser-extension/: browser.jupyterlab-settings
configuration/@jupyterlab/notebook-extension/: tracker.jupyterlab-settings
configuration/@jupyterlab/shortcuts-extension/: shortcuts.jupyterlab-settings
configuration/@jupyterlab/terminal-extension/: plugin.jupyterlab-settings
