[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter-lab-build"
version = "0.0.0"
dependencies = [
    "PyGObject==3.54.5",
    "jupyterlab",
    "jupyterlab-vim",
    "jupyterlab-lsp",
    "python-lsp-server"
]

[project.scripts]
jlb = "jlb:main"

[tool.setuptools]
py-modules = ["jlb"]
