[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter-lab-build"
version = "0.0.0"
dependencies = [
    "jupyterlab",
    "jupyterlab-vim",
    "jupyterlab-lsp",
    "python-lsp-server"
]

[project.optional-dependencies]
front = [
    "PyGObject==3.54.5",
]

[project.scripts]
jlb = "jlb:main"

[tool.setuptools]
py-modules = ["jlb"]

[tool.setuptools.data-files]
"etc/jupyter" = ["configuration/jupyter_lab_config.py"]
"share/jupyter/lab/settings" = ["configuration/overrides.json"]
